[package]
name = "chom"
version = "0.1.0-alpha"
authors = ["Timothée Haudebourg <timothee.haudebourg@ens-rennes.fr>"]
edition = "2018"

[dependencies]
source-span = "^2.6"
once_cell = "*"
btree-slab = { path = "../../../data-structures/btree-slab" }
btree-range-map = { path = "../../../data-structures/btree-range-map" }
itertools = "*"

proc-macro2 = "*"
quote = "*"

utf8-decode = "*"
stderrlog = "*"
log = "*"

clap = {version = "*", features = ["yaml"] }
yansi = "*"