[package]
name = "chom"
version = "0.1.0-alpha"
authors = ["Timothée Haudebourg <timothee.haudebourg@ens-rennes.fr>"]
edition = "2018"

[features]
bin = [
	"chom-rust",
	"stderrlog",
	"clap"
]

[dependencies]
chom-ir = { path = "../ir" }
source-span = "^2.6"
yansi = "*"
once_cell = "*"
btree-slab = { path = "../../../data-structures/btree-slab" }
btree-range-map = { path = "../../../data-structures/btree-range-map" }
itertools = "*"

utf8-decode = "*"
log = "*"

chom-rust = { path = "../rust", optional = true }
stderrlog = { version = "*", optional = true }
clap = { version = "*", features = ["yaml"], optional = true }

[[bin]]
name = "chom"
required-features = ["bin"]