[package]
name = "chom"
version = "0.1.0-alpha"
authors = ["Timothée Haudebourg <timothee.haudebourg@ens-rennes.fr>"]
edition = "2018"

[features]
bin = [
	"chom-rust",
	"stderrlog",
	"clap"
]

[dependencies]
chom-ir = { path = "../ir" }
source-span = "^2.6"
yansi = "^0.5"
btree-slab = { path = "../../../data-structures/btree-slab" }
btree-range-map = { path = "../../../data-structures/btree-range-map" }
itertools = "^0.10"

utf8-decode = "^1.0"
log = "^0.4"

chom-rust = { path = "../rust", optional = true }
stderrlog = { version = "^0.5", optional = true }
clap = { version = "^2.33", features = ["yaml"], optional = true }

[[bin]]
name = "chom"
required-features = ["bin"]